--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
-    "gh-pages": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "^5.0.1",
@@ -40,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://maryiavinogradova.github.io/Portfolio/"
+  "homepage": "https://maryiavinogradova.github.io/Portfolio/",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
