--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "dotenv": "^16.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-use-state": "^1.1.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
+    "react-sticky-header": "^0.2.0",
+    "typeface-oswald": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
